[package]
name = "unirtc"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
serde = { version = "1.0.201", features = ["derive"], optional = true }
thiserror = "1.0.60"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.66"
maybe-sync = "0.1.1"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
web-sys = { version = "0.3.66", features = [
    "RtcConfiguration",
    "RtcDataChannel",
    "RtcDataChannelInit",
    "RtcDataChannelState",
    "RtcDataChannelType",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcIceTransportPolicy",
    "RtcPeerConnection",
    "RtcPeerConnectionState",
    "RtcSdpType",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcStatsReport",
    "TextEncoder"
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
maybe-sync = { version = "0.1.1", features = ["sync"] }
webrtc = { version = "0.11.0", features = ["pem"] }

[dev-dependencies]
shadow-clone = "1.2.1"
tokasm.path = "../tokasm"
tracing = "0.1.40"
unilog.git = "https://github.com/jabuwu/unilog"
